[package]
name = "tokio-rusqlite"
version = "0.6.0"
authors = []
edition = "2021"
description = "Synchronous multi-threaded rusqlite wrapper"
keywords = ["rusqlite", "sqlite"]
categories = ["database"]

[features]
bundled = ["rusqlite/bundled"]

[dependencies]
parking_lot = "0.12.3"
rusqlite = { version = "^0.32.1", features = ["column_decltype", "modern_sqlite"]}
serde = { version = "^1.0.203", features = ["derive"] }
serde_rusqlite = "0.36.0"
thread_local = "1.1.8"
